# AtriFlow

./: README.md  linting.sh  pyproject.toml
.github/workflows/: run_lint_check.yaml
data/: flow_rate_waveform.csv
data/flow_extension_lengths/: flow_extension_lengths_af.json  flow_extension_lengths_sr.json
data/flow_rates/: README.md
data/model_info/model_info_af/0001/: model_info.json
data/model_info/model_info_af/0003/: model_info.json
data/model_info/model_info_af/0004/: model_info.json
data/model_info/model_info_af/0005/: model_info.json
data/model_info/model_info_af/0006/: model_info.json
data/model_info/model_info_af/0007/: model_info.json
data/model_info/model_info_af/0008/: model_info.json
data/model_info/model_info_af/0009/: model_info.json
data/model_info/model_info_af/0019/: model_info.json
data/model_info/model_info_af/0020/: model_info.json
data/model_info/model_info_af/0021/: model_info.json
data/model_info/model_info_af/0022/: model_info.json
data/model_info/model_info_af/0023/: model_info.json
data/model_info/model_info_af/0024/: model_info.json
data/model_info/model_info_af/0025/: model_info.json
data/model_info/model_info_af/0026/: model_info.json
data/model_info/model_info_af/0027/: model_info.json
src/: common.py  optimize_af_flow_rate.py  optimize_sr_flow_rate.py  step_1_find_optimal_N.py  step_2_compute_sr_flow_rates.py  step_4_compute_af_flow_rates.py
src/atriflow/: __init__.py  common.py  compute_af_flow_rate.py  compute_sr_flow_rate.py  optimize_af_flow_rate.py  optimize_sr_flow_rate.py
(+147 files in other folders)
